{{$NEXT}}
 Joelle Maslak <jmaslak@antelopenet>
 * Remove Test::Strict (Perl 5.38 compatability)

2.211420  2021-05-22 03:11:56+00:00 UTC
 Joelle Maslak <jmaslak@antelopenet>
 * Take advantage of 5.34 features
 * Normalize JCM::Bootstrap w/ JTM::Bootstrap
 * Drop support for Perl < 5.22

2.202310  2020-08-18 16:22:33+00:00 UTC
 Joelle Maslak <jmaslak@antelope.net>
 * Enable "no feature qw(indirect)" on 5.32+
 * Enable isa operator on 5.32+
 * Upgrade required version of Parallel::WorkUnit

2.190700  2019-03-11 14:11:06-06:00 America/Denver
 Joelle Maslak <jmaslak@antelope.net>
 * Remove Net::LDAP and Mail::Sender

2.190670  2019-03-08 15:31:43-07:00 America/Denver
 Joelle Maslak <jmaslak@antelope.net>
 * Remove Net::XMPP dependency

2.182001  2018-07-19 09:43:26-06:00 America/Denver
 Joelle Maslak <jmaslak@antelope.net>
 * Rename repository

2.182000  2018-07-19 09:41:15-06:00 America/Denver
 Joelle Maslak <jmaslak@antelope.net>
 * Remove Mercury from dependency chain

2.181940  2018-07-12 18:58:10-06:00 America/Denver
 Joelle Maslak <jmaslak@antelope.net>
 * Convert to stand-alone module

1.021 - May 27, 2018
 Joelle Maslak <jmaslak@antelope.net>
 * Remove excess baggage from tarball

1.020 - May 27, 2018
 Joelle Maslak <jmaslak@antelope.net>
 * Rename distribution

1.019 - December 8, 2017
 Joelle Maslak <jmaslak@antelope.net>
 * Fix tests that failed on perl <= 5.24

1.018 - December 5, 2017
 Joelle Maslak <jmaslak@antelope.net>
 * Enable strict regular expression checking
 * Remove Linux::Prctl from dependencies

1.017 - November 25, 2017
 Joelle Maslak <jmaslak@antelope.net>
 * Many changes, see git change log

1.002 - December 19, 2015
 Joelle Maslak <jmaslak@antelope.net>
 * Initial version
